# grafana-plugin-local

./: .gitignore  README.md  asda.csv  docker-compose.yaml  grafana.ini  list_tickers.csv  package-lock.json  package.json  pyproject.toml
.config/: docker-compose-base.yaml
.github/workflows/: ci.yml
20250226/13551472433/grafana-dev-11.6.0-227112/: summary.txt
20250228/13591969801/grafana-dev-11.6.0-227619/: summary.txt
20250304/13661739508/grafana-dev-11.6.0-228096/: summary.txt
20250305/13678896820/grafana-dev-11.6.0-228392/: summary.txt
20250313/13844787773/grafana-dev-11.6.0-230587/: summary.txt
20250401/14203635118/grafana-dev-12.0.0-234856/: summary.txt
20250523/15212528746/grafana-dev-12.1.0-245449/: summary.txt
20250611/15586998124/grafana-dev-12.1.0-247577/: summary.txt
20250618/15740957157/grafana-dev-12.1.0-249089/: summary.txt
20250618/15741630996/grafana-dev-12.1.0-249131/: summary.txt
etl/: download.py  local_ingest.py
provisioning/dashboards/: LLM Local interpreter-1749660522269.json  dashboard.json  default.yaml  json_model.json
provisioning/datasources/: data-timescale.yml  datasources.yml
src/: README.md  module.ts  plugin.json  types.ts
src/components/: SimplePanel.tsx
tests/: panel.spec.ts
upload/: download.py
utils/: query.sql
